# odw

./: .lycheeignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.md
.github/workflows/: execution_order.yml  links.yml  run.yml  spelling.yml  versions.yml
Extension_topics/: README.md
Tutorials/: README.md
Tutorials/01_Accessing_Open_Data/: README.md  Tuto_1.1_Discovering_Open_Data.ipynb  Tuto_1.2_Accessing_Open_Data_with_GWpy_PyCBC.ipynb  Tuto_1.2_Programmatic_Access_to_Open_Data.ipynb  Tuto_2_Open_Data_access_with_GWpy.ipynb  Tuto_3_Open_Data_access_with_PyCBC.ipynb
Tutorials/02_Generating_Waveforms/: Tuto_2.1_Generating_waveforms.ipynb
Tutorials/03_Signal_Processing/: Tuto_3.1_Estimating_PSD_with_GWpy.ipynb  Tuto_3.1_Fourier_Transforms.ipynb  Tuto_3.2_Noise_PSD.ipynb
Tutorials/04_Searches/: README.md  Tuto_2_Matched_Filtering_In_action.ipynb  Tuto_4.1_Matched_filtering_introduction.ipynb  Tuto_4.2_Matched_Filtering_in_Action.ipynb  Tuto_4.3_Signal_consistency_and_significance.ipynb
Tutorials/05_Parameter_Estimation/: README.md  Tuto_5.1_Introduction_to_parameter_estimation.ipynb  Tuto_5.2_Parameter_estimation_for_compact_object_mergers.ipynb  Tuto_5.3_Discovering_and_using_published_posterior_samples.ipynb
Tutorials/Day_1/: Tuto_1.2_Open_Data_access_with_GWpy.ipynb  Tuto_1.4_Generating_waveforms.ipynb
Tutorials/Day_2/: Tuto_2.1_Matched_filtering_introduction.ipynb  Tuto_2.2_Matched_Filtering_In_action.ipynb  Tuto_2.3_Signal_consistency_and_significance.ipynb
Tutorials/Solutions/: README.md
(+2 files in other folders)
